# nsearch

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  build.bat  build.sh
app/: CMakeLists.txt
app/src/: Common.h  Filter.cpp  Main.cpp  Merge.cpp  Merge.h  Search.cpp  Search.h  Stats.h  ThreadPool.h  WorkerQueue.h
libnsearch/: CMakeLists.txt
libnsearch/include/nsearch/: Aligner.h  Database.h  HashWords.h  Kmer.h  Kmers.h  LocalAligner.h  PairedEndMerger.h  Sequence.h  SequenceReader.h  SequenceWriter.h  SpacedSeeds.h  SpacedSeedsSIMD.h  TextReader.h  Utils.h
libnsearch/include/nsearch/Alignment/: Alignment.h  BandedAlign.h  Cigar.h  Common.h  DP.h  ExtendAlign.h  FindOptimalChain.h  HitTracker.h  OptimalChain.h  OptimalChainFinder.h  RangeMerger.h  Ranges.h  Seed.h  SegmentPair.h
libnsearch/include/nsearch/Alnout/: Writer.h
libnsearch/include/nsearch/Alphabet/: DNA.h  English.h  Protein.h
libnsearch/include/nsearch/Database/: BaseSearch.h  GlobalSearch.h  HSP.h  Highscore.h  HitWriter.h  Kmers.h  Search.h  Searcher.h
libnsearch/include/nsearch/FASTA/: Reader.h  Writer.h
libnsearch/include/nsearch/FASTQ/: QScore.h  Reader.h  Writer.h
libnsearch/include/nsearch/PairedEnd/: Merger.h  Reader.h
libnsearch/include/nsearch/Sequence/: DNA.h  Protein.h
libnsearch/src/: Aligner.cpp  Database.cpp  LocalAligner.cpp  PairedEndMerger.cpp  Sequence.cpp  TextReader.cpp  winstd.h
libnsearch/src/Database/: GlobalSearch.cpp  Searcher.cpp
libnsearch/src/PairedEnd/: Merger.cpp
libnsearch/test/: AlignerTest.cpp  CMakeLists.txt  DatabaseTest.cpp  FASTATest.cpp  FASTQTest.cpp  PairedEndMergerTest.cpp  PairedEndTest.cpp  SequenceTest.cpp  Support.h  TextReaderTest.cpp  UtilsTest.cpp
libnsearch/test/Alignment/: BandedAlignTest.cpp  CigarTest.cpp  ExtendAlignTest.cpp  HitTrackerTest.cpp  OptimalChainFinderTest.cpp  RangeMergerTest.cpp  RangesTest.cpp
libnsearch/test/Alnout/: WriterTest.cpp
libnsearch/test/Alphabet/: DNATest.cpp  ProteinTest.cpp
libnsearch/test/CSV/: WriterTest.cpp
libnsearch/test/Database/: GlobalSearchTest.cpp  HSPTest.cpp  KmersTest.cpp
nsearch/: CMakeLists.txt
nsearch/src/: FileFormat.h  Filter.cpp  Filter.h  Main.cpp  Merge.cpp  Merge.h  Search.cpp  Search.h  Stats.h  WorkerQueue.h
